swagger doc add update water description
